--- a/index.html
+++ b/index.html
@@ -1720,16 +1720,16 @@ body {
             </div>
             <div class="footer-column">
                 <h4>Resources</h4>
-                <a href="#">Blog</a>
-                <a href="#">FAQ</a>
-                <a href="#">Contact</a>
-                <a href="#">Feedback</a>
+                <a href="blog.html">Blog</a>
+                <a href="faq.html">FAQ</a>
+                <a href="contact.html">Contact</a>
+                <a href="feedback.html">Feedback</a>
             </div>
             <div class="footer-column">
                 <h4>Legal</h4>
                 <a href="privacy.html">Privacy Policy</a>
-                <a href="#">Terms of Service</a>
-                <a href="#">Cookie Policy</a>
+                <a href="terms.html">Terms of Service</a>
+                <a href="cookies.html">Cookie Policy</a>
             </div>
         </div>
         <div class="footer-bottom">
