--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@ textarea { min-height: 150px; resize: vertical; }
             ✓ Message sent! We'll get back to you within 24 hours.
         </div>
 
-        <form id="contactForm" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+        <form id="contactForm">
             <div class="form-group">
                 <label for="name">Name</label>
                 <input type="text" id="name" name="name" required placeholder="Your name">
@@ -84,9 +84,6 @@ textarea { min-height: 150px; resize: vertical; }
                 <textarea id="message" name="message" required placeholder="How can we help you?"></textarea>
             </div>
 
-            <input type="hidden" name="_subject" value="CollectorStream Contact Form">
-            <input type="hidden" name="_replyto" value="support@collectorstream.com">
-
             <button type="submit" class="btn-submit">Send Message</button>
         </form>
 
@@ -101,12 +98,34 @@ textarea { min-height: 150px; resize: vertical; }
     </footer>
 
     <script>
-    document.getElementById('contactForm').addEventListener('submit', function(e) {
-        // Show success message
-        setTimeout(function() {
-            document.getElementById('successMessage').style.display = 'block';
-            document.getElementById('contactForm').reset();
-        }, 500);
+    document.getElementById('contactForm').addEventListener('submit', async function(e) {
+        e.preventDefault();
+
+        const formData = new FormData(this);
+        const submitBtn = this.querySelector('.btn-submit');
+        const originalText = submitBtn.textContent;
+
+        submitBtn.textContent = 'Sending...';
+        submitBtn.disabled = true;
+
+        try {
+            const response = await fetch('https://api.collectorstream.com/v1/contact', {
+                method: 'POST',
+                body: formData
+            });
+
+            if (response.ok) {
+                document.getElementById('successMessage').style.display = 'block';
+                this.reset();
+            } else {
+                alert('Failed to send message. Please try again or email us directly.');
+            }
+        } catch (error) {
+            alert('Failed to send message. Please try again or email us directly.');
+        } finally {
+            submitBtn.textContent = originalText;
+            submitBtn.disabled = false;
+        }
     });
     </script>
 </body>
