--- a/feedback.html
+++ b/feedback.html
@@ -53,7 +53,7 @@ textarea { min-height: 150px; resize: vertical; }
             ✓ Thank you! Your feedback has been sent.
         </div>
 
-        <form id="feedbackForm" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+        <form id="feedbackForm">
             <div class="form-group">
                 <label for="feedback_type">Type of Feedback</label>
                 <select id="feedback_type" name="feedback_type" required>
@@ -78,9 +78,6 @@ textarea { min-height: 150px; resize: vertical; }
                 <textarea id="feedback" name="feedback" required placeholder="Tell us what you think..."></textarea>
             </div>
 
-            <input type="hidden" name="_subject" value="CollectorStream Feedback">
-            <input type="hidden" name="_replyto" value="support@collectorstream.com">
-
             <button type="submit" class="btn-submit">Submit Feedback</button>
         </form>
 
@@ -95,11 +92,34 @@ textarea { min-height: 150px; resize: vertical; }
     </footer>
 
     <script>
-    document.getElementById('feedbackForm').addEventListener('submit', function(e) {
-        setTimeout(function() {
-            document.getElementById('successMessage').style.display = 'block';
-            document.getElementById('feedbackForm').reset();
-        }, 500);
+    document.getElementById('feedbackForm').addEventListener('submit', async function(e) {
+        e.preventDefault();
+
+        const formData = new FormData(this);
+        const submitBtn = this.querySelector('.btn-submit');
+        const originalText = submitBtn.textContent;
+
+        submitBtn.textContent = 'Sending...';
+        submitBtn.disabled = true;
+
+        try {
+            const response = await fetch('https://api.collectorstream.com/v1/feedback', {
+                method: 'POST',
+                body: formData
+            });
+
+            if (response.ok) {
+                document.getElementById('successMessage').style.display = 'block';
+                this.reset();
+            } else {
+                alert('Failed to send feedback. Please try again or email us directly.');
+            }
+        } catch (error) {
+            alert('Failed to send feedback. Please try again or email us directly.');
+        } finally {
+            submitBtn.textContent = originalText;
+            submitBtn.disabled = false;
+        }
     });
     </script>
 </body>
