Complete App Store submission preparation
- Add all footer pages (privacy, terms, cookies, blog, FAQ, contact, feedback)
- Implement Postmark email integration for contact/feedback forms
- Add app icons and splash screen
- Add App Store screenshots and submission documentation
- Configure privacy policy and content rights
- Remove social media links from footer
- Add enhanced card detail views with charts and recommendations
- Add dashboard and insights views
- Update iOS app Info.plist for App Store requirements

--- a/integrated-dashboard.html
+++ b/integrated-dashboard.html
@@ -5590,7 +5590,8 @@ async function refreshAllMarketValues() {
 
     for (const card of allCards) {
         try {
-            console.log(`Refreshing card ${card.id} (${card.player_name})...`);
+            const playerName = card.player_name || card.playerName || 'Unknown Player';
+            console.log(`Refreshing card ${card.id} (${playerName})...`);
 
             const result = await refreshMarketValue(card.id);
 
@@ -5603,15 +5604,15 @@ async function refreshAllMarketValues() {
                     allCards[cardIndex].estimated_value = result.marketPrice;
                     allCards[cardIndex].estimatedValue = result.marketPrice;
                     updated++;
-                    console.log(`Updated ${card.player_name} to $${result.marketPrice}`);
+                    console.log(`Updated ${playerName} to $${result.marketPrice}`);
                 }
             } else {
-                console.warn(`No market price found for ${card.player_name}`);
+                console.warn(`No market price found for ${playerName}`);
             }
 
             completed++;
         } catch (error) {
-            console.error(`Failed to refresh card ${card.id} (${card.player_name}):`, error);
+            console.error(`Failed to refresh card ${card.id} (${playerName}):`, error);
             errors++;
             completed++;
         }
